Adds a hide-text-content mixin that can be used to push text content out of view in icon buttons holding text.

--- a/lib/stylesheets/_mixins.scss
+++ b/lib/stylesheets/_mixins.scss
@@ -122,3 +122,9 @@
   margin-left: ($fluidGridColumnWidth * $columns) + ($fluidGridGutterWidth * ($columns - 1)) + ($fluidGridGutterWidth);
   *margin-left: ($fluidGridColumnWidth * $columns) + ($fluidGridGutterWidth * ($columns - 1)) - (.5 / $gridRowWidth * 100px * 1%) + $fluidGridGutterWidth - (.5 / $gridRowWidth * 100px * 1%);
 }
+
+@mixin hide-text-content() {
+  text-indent: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+}
