--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -154,6 +154,7 @@ input::-moz-focus-inner {
 
   @include inline-block;
   @include icon-sprite(cog);
+  @include hide-text-content();
 
   &:active,
   &.active,
@@ -180,6 +181,7 @@ input::-moz-focus-inner {
 
   @include inline-block;
   @include icon-sprite(plus-dotted-grey);
+  @include hide-text-content();
 
   &:active,
   &.active,
@@ -200,6 +202,7 @@ input::-moz-focus-inner {
 
   @include inline-block;
   @include icon-sprite(minus-circle-808080);
+  @include hide-text-content();
 }
 
 .rs-caret {
@@ -269,12 +272,15 @@ input::-moz-focus-inner {
   display: inline-block;
   width: 19px;
   height: 19px;
+  margin: 0;
+  padding: 0;
   background-color: #fff;
   border: 1px solid transparent;
   box-sizing: border-box;
   cursor: pointer;
 
   @include icon-sprite(pencil-666);
+  @include hide-text-content();
 
   &:hover,
   &.hover {
