--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -269,7 +269,6 @@ input::-moz-focus-inner {
 }
 
 .rs-edit {
-  display: inline-block;
   width: 19px;
   height: 19px;
   margin: 0;
@@ -280,6 +279,7 @@ input::-moz-focus-inner {
   cursor: pointer;
 
   @include icon-sprite(pencil-666);
+  @include inline-block();
   @include hide-text-content();
 
   &:hover,
