--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -265,7 +265,7 @@ input::-moz-focus-inner {
 
 .rs-processing-indicator {
   @include icon(13px,12px);
-  background-image: image-image-url('processing-indicator.gif');
+  background-image: url('processing-indicator.gif');
 }
 
 .rs-edit {
