--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -170,6 +170,13 @@ input::-moz-focus-inner {
   }
 }
 
+.rs-location {
+  width: 10px;
+  height: 16px;
+  @include inline-block;
+  @include icon-sprite(location);
+}
+
 .rs-plus {
   width: 12px;
   height: 12px;
@@ -238,6 +245,34 @@ input::-moz-focus-inner {
     > .rs-cog {
       cursor: default;
       @include icon-sprite(cog-small-disabled);
+    }
+
+    > .rs-caret {
+      cursor: default;
+      @include icon-sprite(caret-disabled);
+    }
+  }
+}
+
+.rs-btn-selector {
+  > .rs-location {
+    width: 10px;
+    height: 14px;
+    margin-top: -2px;
+    margin-right: 1px;
+    @include icon-sprite(location);
+  }
+
+  > .rs-caret {
+    margin-top: 2px;
+    margin-left: 1px;
+  }
+
+  &[disabled],
+  &.disabled {
+    > .rs-location {
+      cursor: default;
+      @include icon-sprite(location-disabled);
     }
 
     > .rs-caret {
