--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -222,3 +222,99 @@
     }
   }
 }
+
+
+/* Selector Menu */
+
+.rs-checkmark {
+  width: 10px;
+  height:10px;
+  @include inline-block;
+  @include icon-sprite(checkmark);
+}
+
+
+.rs-selector {
+
+  & > .rs-selector-group {
+    padding: 10px 0 9px 0;
+  }
+
+  .rs-selector-group {
+    a,
+    .rs-dropdown-link,
+    .rs-selector-group-header {
+      padding: 2px 10px 3px 25px;
+      color: #333;
+
+      .rs-checkmark {
+        display: none;
+      }
+
+      &.active {
+        .rs-checkmark {
+          display: block;
+        }
+      }
+
+      &:hover,
+      &.hover,
+      &:focus,
+      &.focus,
+      &.active {
+        background-color: $blue300;
+        color: #fff;
+        text-decoration: none;
+        .rs-checkmark {
+          @include icon-sprite(checkmark_white);
+        }
+      }
+
+      &.selected {
+        .rs-checkmark {
+          display: block;
+        }
+      }
+
+      &[disabled],
+      &.disabled,
+      &[disabled]:hover,
+      &.disabled:hover {
+        color: $grey400;
+        background-color: #fff;
+        .rs-checkmark {
+          display: none;
+        }
+      }
+
+      .rs-checkmark {
+        position: absolute;
+        left: 10px;
+        margin-top: 5px;
+      }
+    }
+
+    .rs-selector-group {
+      .rs-dropdown-link,
+      .rs-selector-group-header {
+        padding-left: 35px;
+      }
+      
+      .rs-selector-group {
+        .rs-dropdown-link,
+        .rs-selector-group-header {
+          padding-left: 45px;
+        }
+      }
+    }
+  }
+}
+
+.rs-selector-group-header {
+  font-weight: 600;
+}
+
+.rs-selector-group {
+  list-style: none;
+  margin: 0;
+}
