[New Feature][Selector] Adds selector-dropdown.js to demo head

--- a/docs/_layouts/demos.html
+++ b/docs/_layouts/demos.html
@@ -11,7 +11,7 @@
 
   <script type="application/javascript" src="//code.jquery.com/jquery-1.10.0.min.js"></script>
   <script type="application/javascript" src="{{ site.baseurl }}/assets/canon.min.js"></script>
-
+  <script type="application/javascript" src="{{ site.baseurl }}/js/selector-dropdown.js"></script>
   <script type="application/javascript">
 
   $(document).ready(function () {
