[New Feature][Facets] Fixes ID issue on facets include file

--- a/docs/_includes/facets.html
+++ b/docs/_includes/facets.html
@@ -1,4 +1,4 @@
-<div class="rs-inner" id="facet-example">
+<div class="rs-inner" id="facets-example">
   <div class="rs-facet-header">
     <div class="rs-facet-clear-link rs-hidden">clear all</div>
     <div class="rs-facet-title">Filter {Product}s</div>
