[New Feature][Facets] Adds tooltip.js to demo head

--- a/docs/_layouts/demos.html
+++ b/docs/_layouts/demos.html
@@ -12,6 +12,7 @@
   <script type="application/javascript" src="//code.jquery.com/jquery-1.10.0.min.js"></script>
   <script type="application/javascript" src="{{ site.baseurl }}/assets/canon.min.js"></script>
   <script type="application/javascript" src="{{ site.baseurl }}/js/facets.js"></script>
+  <script type="application/javascript" src="{{ site.baseurl }}/js/tooltip.js"></script>
 
   <script type="application/javascript">
 
