--- a/docs/css/site.css
+++ b/docs/css/site.css
@@ -912,3 +912,11 @@ h4.rs-quiet, h4 .rs-quiet  {
 .max-width-large {
   max-width: 800px;
 }
+
+.rs-main .rs-main .rs-panel {
+  margin-top: 0;
+}
+
+#facets-example {
+  margin: 0 30px 0 0;
+}
