[New Feature][Document List View Interactions] adds 'rs-' prefix to invisible classes on popovers

--- a/docs/_includes/popover-edit-item.html
+++ b/docs/_includes/popover-edit-item.html
@@ -1,4 +1,4 @@
-<div class="rs-popover invisible" id="edit-item-popover">
+<div class="rs-popover rs-invisible" id="edit-item-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
     <form class="rs-form rs-form-horizontal rs-form-small">
