--- a/docs/_includes/popover-confirm-batch-delete.html
+++ b/docs/_includes/popover-confirm-batch-delete.html
@@ -1,4 +1,4 @@
-<div class="rs-popover invisible" id="confirm-batch-delete-popover" style="width:450px;">
+<div class="rs-popover rs-invisible" id="confirm-batch-delete-popover" style="width:450px;">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
 		<form class="rs-form-horizontal rs-form-large" action="javascript:batchDeleteExample();">
