--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -1,4 +1,4 @@
-<div class="rs-popover invisible" id="confirm-delete-popover">
+<div class="rs-popover rs-invisible" id="confirm-delete-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
     <form class="rs-form rs-form-horizontal">
