--- a/docs/_includes/popover-create-check.html
+++ b/docs/_includes/popover-create-check.html
@@ -1,4 +1,4 @@
-<div class="rs-popover invisible" id="create-check-popover-list-view">
+<div class="rs-popover rs-invisible" id="create-check-popover-list-view">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
 		<form class="rs-form rs-form-horizontal rs-form-large">
