--- a/docs/_includes/popover-resize-server.html
+++ b/docs/_includes/popover-resize-server.html
@@ -1,4 +1,4 @@
-<div class="rs-popover invisible" id="resize-popover">
+<div class="rs-popover rs-invisible" id="resize-popover">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
     <form class="rs-form">
