--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,9 +22,9 @@
   <script type="application/javascript" src="{{site.baseurl}}/js/overlay.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/js/form.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/js/collapsible-highlight.js"></script>
-  <script type="application/javascript" src="{{site.baseurl}}/js/heartbeat-example.js"></script>
+  <script type="application/javascript" src="{{site.baseurl}}/js/heartbeat.js"></script>
   <script type="application/javascript" src="{{site.baseurl}}/js/facets.js"></script>
-  <script type="application/javascript" src="/js/batch-delete-example.js"></script>
+  <script type="application/javascript" src="{{site.baseurl}}/js/batch-delete-example.js"></script>
 
 </head>
 <body class="rs-responsive">
