[New Feature][Document List View Interactions] adds 'rs-' prefix to popover hidden classes

--- a/docs/_includes/popover-confirm-delete.html
+++ b/docs/_includes/popover-confirm-delete.html
@@ -13,7 +13,7 @@
   </div>
 </div>
 
-<div class="rs-popover invisible" id="confirm-delete-popover-list-view">
+<div class="rs-popover rs-invisible" id="confirm-delete-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
     <form class="rs-form rs-form-horizontal">
