--- a/docs/_includes/popover-create-check.html
+++ b/docs/_includes/popover-create-check.html
@@ -44,7 +44,7 @@
 	</div>
 </div>
 
-<div class="rs-popover invisible" id="create-check-popover">
+<div class="rs-popover rs-invisible" id="create-check-popover">
 	<div class="rs-popover-arrow"></div>
 	<div class="rs-popover-content">
 		<form class="rs-form rs-form-horizontal rs-form-large">
