--- a/docs/_includes/popover-resize-server.html
+++ b/docs/_includes/popover-resize-server.html
@@ -77,7 +77,7 @@
   </div>
 </div>
 
-<div class="rs-popover invisible" id="resize-popover-list-view">
+<div class="rs-popover rs-invisible" id="resize-popover-list-view">
   <div class="rs-popover-arrow"></div>
   <div class="rs-popover-content">
     <form class="rs-form">
