--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -49,7 +49,8 @@
   }
 
   > .rs-detail-section-header.hover,
-  > .rs-detail-section-header:hover {
+  > .rs-detail-section-header:hover,
+  > .rs-detail-section-header:focus {
     @include background(linear-gradient(#f7f7f7, #fff));
   }
 }
@@ -80,7 +81,8 @@
   }
 
   > .rs-detail-section-header.hover,
-  > .rs-detail-section-header:hover {
+  > .rs-detail-section-header:hover,
+  > .rs-detail-section-header:focus {
     > .rs-caret {
       @include icon-sprite(section-toggle-expanded-hover);
     }
@@ -95,7 +97,8 @@
   }
 
   > .rs-detail-section-header.hover,
-  > .rs-detail-section-header:hover {
+  > .rs-detail-section-header:hover,
+  > .rs-detail-section-header:focus {
     > .rs-caret {
       @include icon-sprite(section-toggle-collapsed-hover);
     }
