--- a/lib/stylesheets/patterns/_detail-view.scss
+++ b/lib/stylesheets/patterns/_detail-view.scss
@@ -51,6 +51,7 @@
   > .rs-detail-section-header.hover,
   > .rs-detail-section-header:hover,
   > .rs-detail-section-header:focus {
+    outline: none;
     @include background(linear-gradient(#f7f7f7, #fff));
   }
 }
