Changes utility nav link color to #ccc

--- a/lib/stylesheets/patterns/_nav-utility.scss
+++ b/lib/stylesheets/patterns/_nav-utility.scss
@@ -22,7 +22,7 @@
 
   .rs-nav-link {
     padding: 2px 0 1px;
-    color: $grey;
+    color: $grey300;
     position: relative;
     border: 1px solid transparent;
   }
