Use only weighted grey colors

--- a/lib/stylesheets/patterns/_footer.scss
+++ b/lib/stylesheets/patterns/_footer.scss
@@ -1,8 +1,8 @@
 .rs-footer,
 .rs-nav-footer {
-  color: $grey-light;
+  color: $grey400;
   font-size: 13px;
-  background: $grey-darker;
+  background: $grey600;
 
   a {
     color: $grey-light;
