change primary nav hover color to grey, active color to red, and remove hover/active bottom border

--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -46,14 +46,20 @@
 	border: 1px solid transparent;
 
 	&:hover,
-	&.hover,
+	&.hover {
+    & > a,
+    .rs-nav-link {
+      color: $nav-primary-link-hover;
+    }
+  }
+
+  &:active,
 	&.active {
 		& > a,
 		.rs-nav-link {
 			color: $nav-primary-link-active;
-	      	border-bottom: 2px solid $red;
 		}
-  	}
+  }
 
 	&.disabled {
       & > a,
