--- a/lib/stylesheets/_settings.scss
+++ b/lib/stylesheets/_settings.scss
@@ -129,7 +129,7 @@ $app-footer-height: 35px;
 
 $nav-primary-link: #888;
 $nav-primary-link-hover: $grey-darker;
-$nav-primary-link-active: $grey-darker;
+$nav-primary-link-active: $red;
 
 // Z-index
 $zindexModal: 1230;
