--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -105,12 +105,12 @@
 
   a {
     background: transparent image-url('logo-rackspace.png') no-repeat center center;
-    width: 164px;
+    width: $nav-branding-width;
     height: 70px;
     display: block;
   }
 
   & + .rs-nav {
-    padding-left: 164px + 20px;
+    padding-left: $nav-branding-width + 20px;
   }
 }
