make footer more readable

--- a/lib/stylesheets/patterns/_footer.scss
+++ b/lib/stylesheets/patterns/_footer.scss
@@ -1,11 +1,11 @@
 .rs-footer,
 .rs-nav-footer {
-  color: #999;
-  font-size: 12px;
+  color: $grey-light;
+  font-size: 13px;
   background: $grey-darker;
 
   a {
-    color: #999;
+    color: $grey-light;
   }
 
   .rs-nav {
