--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -118,6 +118,7 @@ input::-moz-focus-inner {
   height: 25px;
   padding-left: 0;
   padding-right: 0;
+  padding-top: 0;
   color: $blue;
   background: transparent;
   border: none;
@@ -252,6 +253,10 @@ input::-moz-focus-inner {
     display: block;
     float: left;
     margin-right: 10px;
+  }
+
+  > .rs-btn-link {
+    padding-top: 3px;
   }
 }
 
