Removed rs-link height setting, replaced it with padding-top clear to get vertical alignment working

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -115,7 +115,7 @@ input::-moz-focus-inner {
 }
 
 .rs-link {
-  height: 25px;
+  padding-top: 0;
   padding-left: 0;
   padding-right: 0;
   color: $blue;
