--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -222,3 +222,54 @@
     }
   }
 }
+
+
+.rs-nav-primary .rs-popover {
+  margin-top: 15px;
+}
+
+.rs-nav-popover {
+  display: table-row;
+
+  .rs-dropdown-category {
+    font-size: 14px;
+    font-weight: 400;
+    padding: 20px 20px 0;
+    margin: 0;
+  }
+
+  .rs-nav-menu-items {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+  }
+
+  .rs-nav-menu {
+    display: table-cell;
+    width: 230px;
+    padding-bottom: 15px;
+
+    .rs-dropdown-link {
+      color: #333;
+    }
+  }
+
+  .rs-task-menu {
+    display: table-cell;
+    width: 230px;
+    background-color: #f5f5f5;
+    border-left: 1px solid #ddd;
+    padding-bottom: 15px;
+    .rs-dropdown-link {
+      color: #333;
+    }
+  }
+
+  .rs-dropdown-link {
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    padding: 2px 35px;
+  }
+}
