--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -228,6 +228,7 @@
   margin-top: 15px;
 }
 
+/** Primary Popover Menu **/
 .rs-nav-popover {
   display: table-row;
 
@@ -248,10 +249,6 @@
     display: table-cell;
     width: 230px;
     padding-bottom: 15px;
-
-    .rs-dropdown-link {
-      color: #333;
-    }
   }
 
   .rs-task-menu {
@@ -260,16 +257,22 @@
     background-color: #f5f5f5;
     border-left: 1px solid #ddd;
     padding-bottom: 15px;
-    .rs-dropdown-link {
-      color: #333;
-    }
   }
 
+  a,
   .rs-dropdown-link {
+    color: #333;
     display: block;
     white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
     padding: 2px 35px;
+
+    &:hover,
+    &.hover,
+    &:focus,
+    &.focus {
+      text-decoration: underline;
+    }
   }
 }
