replace rs-nav-item with rs-dropdown-item

--- a/lib/stylesheets/patterns/_menus.scss
+++ b/lib/stylesheets/patterns/_menus.scss
@@ -239,7 +239,7 @@
     margin: 0;
   }
 
-  .rs-nav-menu-items {
+  .rs-dropdown-items {
     margin: 0;
     padding: 0;
     list-style-type: none;
