--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -11,7 +11,7 @@
 
   .rs-nav-link {
     line-height: 1em;
-    padding: 8px 0 2px 0;
+    padding: 8px 32px 2px 33px;
     color: $nav-primary-link;
     font-size: 18px;
     font-weight: 400;
@@ -29,7 +29,7 @@
     vertical-align: text-bottom;
     position: absolute;
     top: 50%;
-    right: -25px;
+    right: 12px;
     @include icon-sprite-position(caret-primary, 16px);
 
     &:before {
@@ -43,7 +43,6 @@
   }
 
   .rs-nav-item {
-    margin: 0 20px;
     border: 1px solid transparent;
 
     &:hover,
@@ -73,14 +72,9 @@
     }
 
     &.rs-dropdown {
-      padding-right: 25px;
-
       .rs-dropdown-menu {
-        margin-top: -2px;
-      }
-
-      &.active .rs-caret {
-        right: -25px;
+        margin: -2px 0 0 0px;
+        left: 32px;
       }
     }
 
@@ -111,6 +105,6 @@
   }
 
   & + .rs-nav {
-    padding-left: $nav-branding-width + 20px;
+    padding-left: $nav-branding-width + 7px;
   }
 }
