Finished up and cleaned up this PR

--- a/lib/stylesheets/patterns/_buttons.scss
+++ b/lib/stylesheets/patterns/_buttons.scss
@@ -130,7 +130,7 @@ input::-moz-focus-inner {
   &[disabled],
   &.disabled {
     text-decoration: none;
-    color: $grey-light;
+    color: $grey300;
   }
 }
 
