--- a/lib/stylesheets/patterns/_list-table.scss
+++ b/lib/stylesheets/patterns/_list-table.scss
@@ -252,10 +252,10 @@ td {
 .rs-table-overlay-loading .rs-table-overlay-message {
   color: $grey500;
   &:before {
-    background: image-url('clouding.gif') center center no-repeat; //TODO - Change image to grey500
+    background: image-url('clouding.gif') center center no-repeat;
     content: "";
     display: block;
-    height: 20px;
+    height: 30px;
     width: 100%;
     position: relative;
     left: -5px;
