--- a/lib/stylesheets/patterns/_progress.scss
+++ b/lib/stylesheets/patterns/_progress.scss
@@ -81,7 +81,7 @@
 
 .rs-caption {
   margin-top: 2px;
-  color: $grey500;
+  color: lighten($grey600, 20%);
   font-size: 11px;
   text-align: center;
 }
