--- a/lib/stylesheets/_utilities.scss
+++ b/lib/stylesheets/_utilities.scss
@@ -1,6 +1,6 @@
 .rs-panel {
   background: $white;
-  @include box-shadow(#c2c2c2 0px 3px 8px 1px);
+  box-shadow: #c2c2c2 0px 3px 8px 1px;
 }
 
 .rs-pull-left, %rs-pull-left {
