--- a/lib/stylesheets/patterns/_main.scss
+++ b/lib/stylesheets/patterns/_main.scss
@@ -6,7 +6,7 @@
 
   &.rs-panel {
     background-color: #f5f5f5;
-    @include box-shadow(#c2c2c2 0px 6px 8px 1px);
+    box-shadow: #c2c2c2 0px 6px 8px 1px;
     margin-top: 50px;
   }
 
