--- a/lib/stylesheets/patterns/_popover.scss
+++ b/lib/stylesheets/patterns/_popover.scss
@@ -3,7 +3,7 @@
   max-width: 700px;
   z-index: $zindexPopovers;
 
-  @include box-shadow(1px 1px 5px 2px rgba(0, 0, 0, 0.4));
+  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.4);
 }
 
 .rs-popover-arrow {
@@ -12,9 +12,8 @@
   height: 20px;
   z-index: $zindexPopovers - 10;
   background-color: $white;
-
-  @include box-shadow(1px 1px 5px 2px rgba(0, 0, 0, 0.4));
-  @include rotate();
+  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.4);
+  transform: rotate(45deg);
 }
 
 .rs-popover-arrow-top-left {
