--- a/lib/stylesheets/patterns/_tooltip.scss
+++ b/lib/stylesheets/patterns/_tooltip.scss
@@ -13,5 +13,5 @@
   background-color: #f5f5f5;
   border: 1px solid #bbb;
 
-  @include box-shadow(rgba(0, 0, 0, 0.15) 0 0 9px 1px);
+  box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.15);
 }
