--- a/lib/stylesheets/patterns/_nav-primary.scss
+++ b/lib/stylesheets/patterns/_nav-primary.scss
@@ -30,7 +30,7 @@
     position: absolute;
     top: 50%;
     right: 12px;
-    @include icon-sprite-position(caret-primary, 16px);
+    @include sprite-position($caret-primary, 10px);
 
     &:before {
       content: "";
@@ -87,7 +87,7 @@
     &.rs-dropdown.hover,
     &.rs-dropdown.active {
       .rs-caret {
-        @include icon-sprite-position(caret-primary-active, 16px);
+        @include sprite-position($caret-primary-active, 10px);
       }
     }
 
