--- a/lib/stylesheets/_mixins.scss
+++ b/lib/stylesheets/_mixins.scss
@@ -165,3 +165,54 @@
 @mixin clearfix {
   overflow: hidden;
 }
+
+// Sprites
+
+@mixin sprite-width($sprite) {
+  width: nth($sprite, 5);
+}
+
+@mixin sprite-height($sprite) {
+  height: nth($sprite, 6);
+}
+
+@mixin sprite-position($sprite) {
+  $sprite-offset-x: nth($sprite, 3);
+  $sprite-offset-y: nth($sprite, 4);
+  background-position: $sprite-offset-x  $sprite-offset-y;
+}
+
+@mixin sprite-image($sprite) {
+  $sprite-image: nth($sprite, 9);
+  background-color: transparent;
+  background-image: url(#{$sprite-image});
+}
+
+@mixin sprite($sprite) {
+  @include sprite-image($sprite);
+  @include sprite-position($sprite);
+  @include sprite-width($sprite);
+  @include sprite-height($sprite);
+}
+
+@mixin sprite-position($sprite, $xOffset: null) {
+  $sprite-offset-x: if($xOffset, $xOffset, nth($sprite, 3));
+  $sprite-offset-y: nth($sprite, 4);
+  background-position: $sprite-offset-x  $sprite-offset-y;
+}
+
+@mixin sprites($sprites) {
+  @each $sprite in $sprites {
+    $sprite-name: nth($sprite, 10);
+    .rs-icon-#{$sprite-name} {
+      @include sprite($sprite);
+    }
+  }
+}
+
+@mixin icon($width: 13px, $height: 13px) {
+  display: inline-block;
+  width: $width;
+  height: $height;
+  vertical-align: text-top;
+}
