docs(version): move docs into version subdir

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -31,11 +31,11 @@
       <div class="rs-container">
         <ul class="rs-nav">
           <li class="rs-nav-item {% if page.utilitySection == 'Home' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/">Rackspace<span class="super-script">&reg;</span> Canon</a></li>
-          <li class="rs-nav-item {% if page.utilitySection == 'Get Started' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/get-started">Get Started</a></li>
-          <li class="rs-nav-item {% if page.utilitySection == 'App Layout' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/app-layout">App Layout</a></li>
-          <li class="rs-nav-item {% if page.utilitySection == 'UX Patterns' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/ux-patterns">UX Patterns</a></li>
-          <li class="rs-nav-item {% if page.utilitySection == 'UI Components' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/ui-components">UI Components</a></li>
-          <li class="rs-nav-item {% if page.utilitySection == 'About Canon' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/about-canon">About Canon</a></li>
+          <li class="rs-nav-item {% if page.utilitySection == 'Get Started' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/{{site.CANON.versions[0]}}/get-started">Get Started</a></li>
+          <li class="rs-nav-item {% if page.utilitySection == 'App Layout' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/{{site.CANON.versions[0]}}/app-layout">App Layout</a></li>
+          <li class="rs-nav-item {% if page.utilitySection == 'UX Patterns' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/{{site.CANON.versions[0]}}/ux-patterns">UX Patterns</a></li>
+          <li class="rs-nav-item {% if page.utilitySection == 'UI Components' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/{{site.CANON.versions[0]}}/ui-components">UI Components</a></li>
+          <li class="rs-nav-item {% if page.utilitySection == 'About Canon' %}active{%endif%}"><a class="rs-nav-link" href="{{site.baseurl}}/{{site.CANON.versions[0]}}/about-canon">About Canon</a></li>
         </ul>
       </div>
     </div>
