--- a/docs/_layouts/canon-content.html
+++ b/docs/_layouts/canon-content.html
@@ -6,8 +6,10 @@ layout: default
 <div class="rs-nav-secondary nav-secondary-affix"  data-spy="affix">
   <div class="rs-container">
     <ul class="rs-nav">
-      {% for post in site.categories.[page.title] %}
-      <li class="rs-nav-item"><a class="rs-nav-link" href="#{{ post.title | replace: " ", "-" | downcase }}">{{ post.title }}</a></li>
+      {% for post in site.categories.[page.version] %}
+        {% if post.category == page.title %}
+        <li class="rs-nav-item"><a class="rs-nav-link" href="#{{ post.title | replace: " ", "-" | downcase }}">{{ post.title }}</a></li>
+        {% endif %}
       {% endfor %}
     </ul>
   </div>
@@ -17,17 +19,18 @@ layout: default
     <div class="rs-container">
       <div class="rs-main">
         <div class="rs-content rs-panel">
-        {% for post in site.categories.[page.title] %}
-          <!-- {{ post.title }} -->
-          <div class="header-section" id="{{ post.title | replace: " ", "-" | downcase }}">
-            <div class="header-section-subtitle">{{ page.title }}</div>
-            <div class="header-section-title">{{ post.title }}</div>
-          </div>
-          <div class="website-content-section">
-            <div class="content-section-body">
-              {{ post.content }}
+        {% for post in site.categories.[page.version] %}
+          {% if post.category == page.title %}
+            <div class="header-section" id="{{ post.title | replace: " ", "-" | downcase }}">
+              <div class="header-section-subtitle">{{ page.title }}</div>
+              <div class="header-section-title">{{ post.title }}</div>
             </div>
-          </div>
+            <div class="website-content-section">
+              <div class="content-section-body">
+                {{ post.content }}
+              </div>
+            </div>
+          {% endif %}
         {% endfor %}
       </div>
     </div>
